<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeachMultiplica1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView106"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/multiplicaenseña"
                android:textAlignment="center"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider56"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView107"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/multiplicar_tablas"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/tablas" />

            <TextView
                android:id="@+id/textView140"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/multiplicacioncero"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_estilo"
                android:fontFamily="@font/happy_monkey"
                android:onClick="ejemplos"
                android:text="@string/Ejemplos_button"
                android:textColor="@color/Fondo"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>