<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeahSuma3">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView117"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/titulo_tutosuma"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView119"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/explicacion"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider45"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView121"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/analisis_sumamulti"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider46"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView122"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/analisis_sumamulti2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider47"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView124"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/analisis_ejemplo"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider48"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView125"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/analisisejemplo2"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider49"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView123"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/analisis_ejemplo3"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider50"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView126"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/mano_ejemplo"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/mano_uno" />

            <View
                android:id="@+id/divider51"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView127"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/mano_ejemplo2"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/mano_dos" />

            <View
                android:id="@+id/divider52"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView128"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/mano_ejemplo3"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/manos_unomasdos" />

            <View
                android:id="@+id/divider53"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView129"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mano_resultado"
                android:textAlignment="center"
                android:textColor="?attr/colorError"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/mano_tres" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_estilo"
                android:fontFamily="@font/happy_monkey"
                android:onClick="siguiente"
                android:text="@string/Siguiente"
                android:textColor="@color/Fondo"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>