<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeachSuma2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explica"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/tres_manzanas" />

            <View
                android:id="@+id/divider40"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView112"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explica2"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/dos_peras" />

            <View
                android:id="@+id/divider41"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView113"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/explica3"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider42"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/Fondo" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView118"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ope"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/divider43"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_weight="1"
                    android:background="@color/Fondo" />

                <RadioButton
                    android:id="@+id/dos_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dos"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/tres_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tres"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/cinco_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cinco"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />
            </RadioGroup>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boton_estilo_dos"
                    android:onClick="comprobar"
                    android:text="@string/comprobar"
                    android:textColor="@color/Fondo"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView120"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/happy_monkey"
                    android:text="@string/correcto"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:visibility="invisible" />

            </FrameLayout>

            <View
                android:id="@+id/divider44"
                android:layout_width="match_parent"
                android:layout_height="7dp"
                android:background="@color/Fondo" />

            <ImageView
                android:id="@+id/imagen_cincofrutas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                android:visibility="invisible"
                app:srcCompat="@mipmap/cinco_frutas" />

            <Button
                android:id="@+id/bu_siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_estilo"
                android:onClick="siguiente"
                android:text="@string/Siguiente"
                android:textColor="@color/Fondo"
                android:visibility="invisible" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>