<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeachSuma1">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView114"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/titulo_tutosuma"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView115"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/explicacion"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/divider39"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView116"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/explicacion2"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView105"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/porejemplo"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider34"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView108"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionproblemauno"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/suma_peras" />

            <View
                android:id="@+id/divider35"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView109"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionproblemauno_dos"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/once_peras" />

            <View
                android:id="@+id/divider36"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/Fondo" />

            <TextView
                android:id="@+id/textView110"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcionproblemauno_tres"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen"
                app:srcCompat="@mipmap/resultado_peras" />

            <View
                android:id="@+id/divider37"
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/Fondo" />

            <View
                android:id="@+id/divider38"
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/Fondo" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_estilo"
                android:fontFamily="@font/happy_monkey"
                android:text="@string/Siguiente"
                android:onClick="siguiente"
                android:textColor="@color/Fondo"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>