<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instrucciones">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="193dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/instrucc_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo_Instrucciones"
            android:textAlignment="center" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/instrucc_cuerpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuerpo_instrucciones" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="187dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</android.support.constraint.ConstraintLayout>